German translation updated.

--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -41544,7 +41544,7 @@
         "de" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Design"
+            "value" : "Stil"
           }
         },
         "el" : {
@@ -68216,7 +68216,7 @@
         "de" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Licht"
+            "value" : "Fein"
           }
         },
         "el" : {
@@ -139041,7 +139041,7 @@
         "de" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Gewicht"
+            "value" : "Stärke"
           }
         },
         "el" : {
