Clean stream on external display.

--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -33125,6 +33125,9 @@
     "Clean snapshots" : {
 
     },
+    "Clean stream" : {
+
+    },
     "Close" : {
       "localizations" : {
         "de" : {
