Cycling power device started.

--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -40439,6 +40439,12 @@
         }
       }
     },
+    "Cycling power device" : {
+
+    },
+    "Cycling power devices" : {
+
+    },
     "Data rate limit" : {
       "localizations" : {
         "de" : {
