--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -62917,6 +62917,9 @@
         }
       }
     },
+    "Heart rate devices" : {
+
+    },
     "Height" : {
       "localizations" : {
         "de" : {
