Lap times in text widget.

--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -5171,6 +5171,9 @@
         }
       }
     },
+    "{lapTimes} - Show lap times" : {
+
+    },
     "{muted} - Show muted" : {
       "localizations" : {
         "de" : {
